--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<h1 class="text-6xl text-red-900 font-bold underline">
-  Hello world!
-</h1>
+<!-- app.component.html -->
+
+<router-outlet></router-outlet>
