--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,35 +1,25 @@
-<!-- signup.component.html -->
-
 <div class="h-screen bg-white dark:bg-black">
-
   <div class="signup-container">
-
     <h2 class="pb-5 text-3xl font-semibold text-rose-700">Create an Account!</h2>
-
-    <form class="form-lg text-center" (submit)="signUp(email.value, password.value, confirmPassword.value)">
-
+    <form class="form-lg text-center" (submit)="signUp($event, email.value, password.value, confirmPassword.value)">
       <div class="m-0 mx-auto my-auto">
-
         <div class="form-group">
           <label for="email" class="dark:text-gray-300">Email: </label>
           <input class="border-2 border-black rounded-md px-7 text-center" type="email" #email id="email" name="email" required>
         </div>
-
         <div class="form-group">
           <label class="dark:text-gray-300" for="password">Password:</label>
           <input class="border-2 border-black rounded-md px-7 text-center ml-2" type="password" #password id="password" name="password" required>
         </div>
-
         <div class="form-group">
           <label class="dark:text-gray-300" for="confirmPassword">Confirm Password:</label>
           <input class="border-2 border-black rounded-md px-7 text-center ml-2" type="password" #confirmPassword id="confirmPassword" name="confirmPassword" required>
         </div>
-
       </div>
-
-      <button class="btn-signup">Sign Up</button>
+      <button class="btn-signup" type="submit">Sign Up</button>
     </form>
-
   </div>
-
 </div>
+
+
+
