--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,18 +1,14 @@
-  <!-- navbar.component.html -->
+<!-- navbar.component.html -->
 
-
-  <nav class="bg-white dark:bg-zinc-950 shadow-sm shadow-rose-100 dark:shadow-rose-950 px-4 py-6 fixed w-full top-0 z-20
-  transition-all duration-500 ease-in-out">
-    <div class="container mx-auto flex justify-between items-center">
-      <a href="#" class="text-rose-600 dark:text-rose-600 dark:hover:text-rose-800 font-bold text-2xl">Angular Banking</a>
-      <div>
-        <a href="#" class="text-rose-600 hover:text-rose-900 font-semibold dark:text-rose-600 dark:hover:text-rose-800 font-semibold px-4">Home</a>
-        <a href="#" class="text-rose-600 hover:text-rose-900 font-semibold dark:text-rose-600 dark:hover:text-rose-800 font-semibold px-4">Settings</a>
-        <a href="#" class="text-rose-600 hover:text-rose-900 font-semibold dark:text-rose-600 dark:hover:text-rose-800 px-4">Logout</a>
-        <a href="#" class="text-rose-600 hover:text-rose-900 font-semibold dark:text-rose-600 dark:hover:text-rose-800 px-4"
-        (click)="toggleDarkMode($event)">Dark</a>
-        <a href="#" class="text-rose-600 hover:text-rose-900 font-semibold dark:text-rose-600 dark:hover:text-rose-800 px-4"
-        (click)="signOut($event)">Sign Out</a>
-      </div>
+<nav class="bg-white dark:bg-zinc-950 shadow-sm shadow-rose-100 dark:shadow-rose-950 px-4 py-6 fixed w-full top-0 z-20 transition-all duration-500 ease-in-out">
+  <div class="container mx-auto flex justify-between items-center">
+    <a [routerLink]="isLoggedIn ? ['/dashboard'] : ['#']" class="text-rose-600 dark:text-rose-600 dark:hover:text-rose-800 font-bold text-2xl">Angular Banking</a>
+    <div>
+      <a [routerLink]="isLoggedIn ? ['/dashboard'] : ['#']" class="text-rose-600 hover:text-rose-900 font-semibold dark:text-rose-600 dark:hover:text-rose-800 px-4">Home</a>
+      <a href="#" class="text-rose-600 hover:text-rose-900 font-semibold dark:text-rose-600 dark:hover:text-rose-800 px-4">Settings</a>
+      <a href="#" class="text-rose-600 hover:text-rose-900 font-semibold dark:text-rose-600 dark:hover:text-rose-800 px-4" (click)="toggleDarkMode($event)">Dark</a>
+      <a href="#" class="text-rose-600 hover:text-rose-900 font-semibold dark:text-rose-600 dark:hover:text-rose-800 px-4" (click)="signOut($event)">Sign Out</a>
     </div>
-  </nav>
+  </div>
+</nav>
+
