--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,8 +1,16 @@
 <div class="h-screen bg-white dark:bg-black">
   <div class="signup-container">
     <h2 class="pb-5 text-3xl font-semibold text-rose-700">Create an Account!</h2>
-    <form class="form-lg text-center" (submit)="signUp($event, email.value, password.value, confirmPassword.value)">
+    <form class="form-lg text-center" (submit)="signUp($event, email.value, fname.value, lname.value, password.value, confirmPassword.value)">
       <div class="m-0 mx-auto my-auto">
+        <div class="form-group">
+          <label for="email" class="dark:text-gray-300">First Name: </label>
+          <input class="border-2 border-black rounded-md px-7 text-center" type="text" #fname id="fname" name="fname" required>
+        </div>
+        <div class="form-group">
+          <label for="email" class="dark:text-gray-300">Last Name: </label>
+          <input class="border-2 border-black rounded-md px-7 text-center" type="text" #lname id="lname" name="lname" required>
+        </div>
         <div class="form-group">
           <label for="email" class="dark:text-gray-300">Email: </label>
           <input class="border-2 border-black rounded-md px-7 text-center" type="email" #email id="email" name="email" required>
