--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -7,6 +7,7 @@
   <div class="flex-grow bg-gray-100 dark:bg-black transition-all duration-500 ease-in-out">
     <div class="container mx-auto px-4 py-8 mt-7">
       <h1 class="text-3xl font-bold mb-4 text-gray-700 dark:text-rose-600">Dashboard</h1>
+      <h2 class="text-3xl font-semibold mb-4 mt-7 text-gray-700 dark:text-rose-600">Welcome {{firstName}}!</h2>
       <!-- Your dashboard content goes here -->
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
         <!-- Example card -->
