--- a/src/app/components/transaction-history/transaction-history.component.html
+++ b/src/app/components/transaction-history/transaction-history.component.html
@@ -1,6 +1,13 @@
 <!-- transaction-history.component.html -->
 
 <h3 class="text-lg font-semibold mb-2 text-center text-gray-600 dark:text-gray-300">Transaction History</h3>
-<p class="py-20 w-full dark:text-gray-300">adghzuyaefhdbuhwabdmckneqcklancqncadju</p>
 
-<!-- Implement transaction history display here -->
+<div class="text-gray-600 dark:text-gray-300"
+*ngIf="transactionHistory$ | async as transactions">
+  <div *ngFor="let transaction of transactions">
+    <p>Date: {{ transaction.timestamp | date:'short' }}</p>
+    <p>Type: {{ transaction.type }}</p>
+    <p>Amount: {{ transaction.amount | currency }}</p>
+    <hr>
+  </div>
+</div>
