--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,10 +1,17 @@
 <!-- home.component.html -->
 
-<div class="h-screen bg-white dark:bg-black">
-  <div class="container1">
-    <h1 class="text-6xl text-rose-700">Welcome to Angular Banking</h1>
-    <br>
-    <p class="text-lg dark:text-gray-300">Please sign in to access your account.</p>
-    <button (click)="navigateToLogin()" class="btn-sign-in">Sign In</button>
+<app-navbar-general></app-navbar-general>
+
+<div class="h-screen relative bg-cover bg-center" style="background-image: url('assets/photo/main.jpg');">
+  <div class="absolute inset-0 bg-black bg-opacity-70"></div>
+  <div class="relative z-10 flex items-center justify-center h-full">
+    <div class="text-center lg:mt-10 mt-0">
+      <h1 class="text-6xl text-rose-700">Welcome to Angular Banking</h1>
+      <br>
+      <p class="text-lg text-gray-300 lg:mt-0 mt-20">Please sign in to access your account.</p>
+      <button (click)="navigateToLogin()" class="btn-sign-in mt-4">Sign In</button>
+    </div>
   </div>
 </div>
+
+<app-footer></app-footer>
