--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,8 +1,12 @@
 <!-- login.component.html -->
 
-<div class="h-screen bg-white dark:bg-black">
+<app-navbar-general></app-navbar-general>
 
-  <div class="login-container">
+<div class="h-screen relative bg-cover bg-center" style="background-image: url('assets/photo/login.jpg');">
+
+  <div class="absolute inset-0 bg-black bg-opacity-70"></div>
+
+  <div class="login-container relative">
 
     <h2 class="pb-5 text-3xl font-semibold text-rose-700">Welcome!</h2>
 
@@ -11,12 +15,12 @@
       <div class="m-0 mx-auto my-auto">
 
         <div class="form-group">
-          <label for="username" class="dark:text-gray-300">Username: </label>
+          <label for="username" class="text-gray-300">Username: </label>
           <input class="border-2 border-black rounded-md px-7 text-center" type="email" #email id="username" name="username" required>
         </div>
 
         <div class="form-group">
-          <label class="ml dark:text-gray-300" for="password">Password:</label>
+          <label class="ml text-gray-300" for="password">Password:</label>
           <input class="border-2 border-black rounded-md px-7 text-center ml-2" type="password" #password id="password" name="password" required>
         </div>
 
@@ -28,8 +32,9 @@
     <p class="text-white text-xl font-semibold mt-4">or</p>
 
     <button class="btn-login mt-3" routerLink="/signup">Signup</button>
+    
 
   </div>
+  
 
 </div>
-
