--- a/src/app/components/navbar-general/navbar-general.component.html
+++ b/src/app/components/navbar-general/navbar-general.component.html
@@ -3,7 +3,7 @@
 <nav class="bg-white dark:bg-zinc-950 shadow-sm shadow-rose-100 dark:shadow-rose-950 px-4 py-7 fixed w-full top-0 z-20 transition-all duration-500 ease-in-out">
     <div class="container mx-auto flex justify-between items-center">
       <div>
-        <a [routerLink]="isLoggedIn ? ['/dashboard'] : ['#']" class="text-rose-600 dark:text-rose-600 dark:hover:text-rose-800 font-bold lg:text-2xl md:text-xl">Angular Banking</a>
+        <a routerLink="/" class="text-rose-600 dark:text-rose-600 dark:hover:text-rose-800 font-bold lg:text-2xl md:text-xl">Angular Banking</a>
       </div>
   
       <!-- Different menu layout for large screens -->
